# saral_hr_repo

./: README.md  h origin suvarna  pyproject.toml
saral_hr/: hooks.py  install.py  modules.txt  permission.py  setup.py  uninstall.py
saral_hr/fixtures/: custom_docperm.json  print_format.json  report.json  role.json  salary_component.json  workspace.json
saral_hr/saral_hr/: api.py
saral_hr/saral_hr/dashboard_chart/draft_salary_slips/: draft_salary_slips.json
saral_hr/saral_hr/dashboard_chart/generated_slips/: generated_slips.json
saral_hr/saral_hr/dashboard_chart/pending_slips/: pending_slips.json
saral_hr/saral_hr/dashboard_chart/present_attendance/: present_attendance.json
saral_hr/saral_hr/dashboard_chart/salary_slip_status_by_company/: salary_slip_status_by_company.json
saral_hr/saral_hr/dashboard_chart/submitted_salary_slips/: submitted_salary_slips.json
saral_hr/saral_hr/dashboard_chart/total_active_employees/: total_active_employees.json
saral_hr/saral_hr/dashboard_chart_source/salary_slip_status/: salary_slip_status.js  salary_slip_status.json  salary_slip_status.py
saral_hr/saral_hr/doctype/attendance/: attendance.js  attendance.json  attendance.py  attendance_calender.js  attendance_dashboard.py  attendance_list.js  test_attendance.py
saral_hr/saral_hr/doctype/bank_name/: bank_name.js  (+3 more)
saral_hr/www/Salary_dashboard/: index.html  index.js  index.py
saral_hr/www/employee_timeline/: index.html  index.js  index.py
saral_hr/www/mark_attendance/: index.html  index.js  index.py
saral_hr/www/salary_summary/: index.html  index.js  index.py
(+155 files in other folders)
